[gd_scene load_steps=2 format=3 uid="uid://settlement_screen"]

[ext_resource type="Script" path="res://src/ui/screens/SettlementScreen.gd" id="1_script"]

[node name="SettlementScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "本局结算"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "结算结果"
horizontal_alignment = 1

[node name="KeysContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="FavorabilityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
text = "好感度变化"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 800.0
offset_right = 800.0
offset_bottom = 860.0
theme_override_font_sizes/font_size = 24
text = "继续剧情"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 800.0
offset_right = 1200.0
offset_bottom = 860.0
theme_override_font_sizes/font_size = 24
text = "返回招待所"
