extends Control

@onready var result_label = $ResultLabel
@onready var keys_container = $KeysContainer
@onready var favorability_label = $FavorabilityLabel
@onready var continue_button = $ContinueButton
@onready var back_button = $BackButton

func _ready():
	continue_button.pressed.connect(_on_continue_pressed)
	back_button.pressed.connect(_on_back_pressed)
	
	calculate_result()

func calculate_result():
	var participants = RoundManager.participants
	var drunk_npc = null
	var keys = []
	
	# æ£€æŸ¥è°å–é†‰äº†
	for p in participants:
		if p.is_drunk():
			if not p.is_player:
				drunk_npc = p
				# è·å¾—é…’åèƒ¡è¯é’¥åŒ™
				keys.append({
					"name": p.name + "çš„é…’åèƒ¡è¯",
					"level": "ä½çº§"
				})
			
			# æ£€æŸ¥å¥½æ„Ÿåº¦æ¡ä»¶
			if p.favorability > 20:
				if p.is_drunk():
					keys.append({
						"name": p.name + "çš„é…’åçœŸè¨€",
						"level": "é«˜çº§"
					})
				else:
					keys.append({
						"name": p.name + "çš„å¥½è¨€ç›¸å‘Š",
						"level": "ä¸­çº§"
					})
	
	# æ˜¾ç¤ºç»“æœ
	if drunk_npc:
		result_label.text = drunk_npc.name + " å–é†‰äº†ï¼"
	else:
		result_label.text = "æ— äººå–é†‰ï¼Œæ¸¸æˆç»“æŸ"
	
	# æ˜¾ç¤ºè·å¾—çš„é’¥åŒ™
	for key in keys:
		var label = Label.new()
		label.text = "ğŸ—ï¸ %s (%s)" % [key.name, key.level]
		keys_container.add_child(label)
	
	# æ˜¾ç¤ºå¥½æ„Ÿåº¦å˜åŒ–
	var favor_text = "å¥½æ„Ÿåº¦å˜åŒ–ï¼š\n"
	for p in participants:
		if not p.is_player:
			favor_text += "%s: %d\n" % [p.name, p.favorability]
	favorability_label.text = favor_text

func _on_continue_pressed():
	# è¿›å…¥å‰§æƒ…å¯¹è¯ï¼ˆç®€åŒ–ï¼šç›´æ¥è¿”å›æ‹›å¾…æ‰€ï¼‰
	GameManager.change_state(GameManager.GameState.HOSTEL)
	get_tree().change_scene_to_file("res://src/ui/screens/HostelScreen.tscn")

func _on_back_pressed():
	GameManager.change_state(GameManager.GameState.HOSTEL)
	get_tree().change_scene_to_file("res://src/ui/screens/HostelScreen.tscn")
